# hi

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/endpoints/: generation.py
apps/api/app/core/: config.py
apps/api/app/domain/: models.py
apps/api/app/models/: __init__.py
apps/api/app/schemas/: common.py  generation.py
apps/api/app/services/: code_generator.py  gemini_client.py  generation_service.py  page_inspector.py  prompt_builder.py  scenario_planner.py
apps/backend/: requirements.txt
apps/backend/app/: main.py
apps/backend/app/core/: logging.py
apps/backend/app/domain/: models.py
apps/backend/app/repositories/: job_store.py
apps/backend/app/services/: artifact_exporter.py  gemini_client.py  generation_service.py  (+3 more)
apps/frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/components/: CodePreview.tsx  GeneratorForm.tsx  ResultPanel.tsx  ScenarioSummary.tsx  WarningsPanel.tsx
apps/web/: .env.example  .eslintrc.json  Dockerfile  next.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: CodePreview.tsx  FileDropZone.tsx  GeneratorForm.tsx  JobStatus.tsx  ResultPanel.tsx  ScenarioSummary.tsx  WarningsPanel.tsx
apps/web/lib/: api.ts
apps/web/types/: index.ts
docs/: architecture.md  future-roadmap.md  product-flow.md
(+9 files in other folders)
